[tool.poetry]
name = "secret-schema-validation"
version = "0.1.0"
description = ""
authors = ["Ryan Neff"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.4.0"
boto3 = "^1.20.43"
genson = "^1.2.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
